theBigDot.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

:root {
    --light-logo: rgb(87, 87, 87);
    --dark-logo: rgb(228, 228, 228);

    --text-color: #98c5a7;
    --text-color: #ff8686;
    --text-color: #929292;
    --text-color: #a0886c;
    --text-color: #f0b863;
    --text-color: #8364ac;

    --light-bg: rgb(248, 248, 248);
    --dark-bg: rgb(19, 19, 19);
    --light-bg-fill: rgb(240, 240, 240);
    --dark-bg-fill: rgb(34, 34, 34);
}

.hidden {
    display: none;
}

svg {
    height: 20px;
    width: 20px;
}
nav svg:nth-child(1)  {
    fill: rgb(255, 115, 0);
}
nav svg:nth-child(2)  {
    fill: rgb(239, 244, 255);
}

body {
    background-color: var(--light-bg);
    font-family: 'Comfortaa', sans-serif;
}

.overall-container {
    width: 100vw;
    height: 100vh;
    max-width: 100%;
    max-height: 100%;
    padding-bottom: 30px;
    transition: linear 0.6s;
    -webkit-transition: linear 0.6s;
    -moz-transition: linear 0.6s;
    -ms-transition: linear 0.6s;
    -o-transition: linear 0.6s;
}

.nav {
    /* border: 1px solid grey; */
    display: flex;
    justify-content: space-between;
    align-items: center;
    max-width: 1028px;
    padding: 20px 30px;
    margin: 0 auto;
}
.nav__logo {
    color: var(--light-logo);
    font-family: sans-serif;
    font-weight: bold;
    transition: linear 0.6s;
    -webkit-transition: linear 0.6s;
    -moz-transition: linear 0.6s;
    -ms-transition: linear 0.6s;
    -o-transition: linear 0.6s;
}
.nav__mode {
    height: 50px;
    width: 50px;
    background-color: var(--light-bg-fill);
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    border-radius: 19px;
    -webkit-border-radius: 19px;
    -moz-border-radius: 19px;
    -ms-border-radius: 19px;
    -o-border-radius: 19px;
    transition: linear 0.6s;
    -webkit-transition: linear 0.6s;
    -moz-transition: linear 0.6s;
    -ms-transition: linear 0.6s;
    -o-transition: linear 0.6s;
}

.clock-frame {
    width: 350px;
    height: 350px;
    background-color: white;
    margin: 15px auto;
    margin-bottom: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 10px solid rgb(231, 231, 231, 0.2);
    border-radius: 50%;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -ms-border-radius: 50%;
    -o-border-radius: 50%;
    transition: linear 0.6s;
    -webkit-transition: linear 0.6s;
    -moz-transition: linear 0.6s;
    -ms-transition: linear 0.6s;
    -o-transition: linear 0.6s;
    box-shadow: 0 0 20px 20px rgba(231, 231, 231, 0.1);
}

.clock {
    position: relative;
    width: 250px;
    height: 250px;
    display: flex;
    justify-content: center;
    align-items: center;
    background: white;
    box-shadow: 0 0 60px rgba(204, 204, 204, 0.4);
    border-radius: 50%;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -ms-border-radius: 50%;
    -o-border-radius: 50%;
    transition: linear 0.6s;
    -webkit-transition: linear 0.6s;
    -moz-transition: linear 0.6s;
    -ms-transition: linear 0.6s;
    -o-transition: linear 0.6s;
}
.clock__hour {
    font-size: 4rem;
    color: var(--text-color);
}

.overall-minute-container {
    position: absolute;
    width: inherit;
    height: inherit;
    transition: linear 0.6s;
    -webkit-transition: linear 0.6s;
    -moz-transition: linear 0.6s;
    -ms-transition: linear 0.6s;
    -o-transition: linear 0.6s;
    /* border: 3px dotted rgb(255, 205, 205); */
}
.minute-container {
    position: relative;
    width: 45px;
    height: 45px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 20px auto;
    background-color: var(--text-color);
    border-radius: 50%;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -ms-border-radius: 50%;
    -o-border-radius: 50%;
    transition: linear 0.6s;
    -webkit-transition: linear 0.6s;
    -moz-transition: linear 0.6s;
    -ms-transition: linear 0.6s;
    -o-transition: linear 0.6s;
}
.minute {
    color: white;
    font-family: 'Josefin Sans', sans-serif;
    transition: linear 0.6s;
    -webkit-transition: linear 0.6s;
    -moz-transition: linear 0.6s;
    -ms-transition: linear 0.6s;
    -o-transition: linear 0.6s;
}

.second-container {
    position: absolute;
    width: inherit;
    height: inherit;
    /* border: 1px solid pink; */
}
.second-indicator {
    width: 17px;
    height: 17px;
    margin: -9px auto;
    background-color: var(--text-color);
    border: 2px solid white;
    border-radius: 50%;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -ms-border-radius: 50%;
    -o-border-radius: 50%;
    transition: linear 0.6s;
    -webkit-transition: linear 0.6s;
    -moz-transition: linear 0.6s;
    -ms-transition: linear 0.6s;
    -o-transition: linear 0.6s;
}

.date-container {
    padding: 20px 25px;
    width: 200px;
    text-align: center;
    margin: 30px auto;
    background-color: var(--light-bg-fill);
    border-radius: 15px;
    -webkit-border-radius: 15px;
    -moz-border-radius: 15px;
    -ms-border-radius: 15px;
    -o-border-radius: 15px;
    transition: linear 0.6s;
    -webkit-transition: linear 0.6s;
    -moz-transition: linear 0.6s;
    -ms-transition: linear 0.6s;
    -o-transition: linear 0.6s;
}
.date {
    color: var(--text-color);
}

.color-container {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
}
/* choose color button */
.choose-color {
    padding: 15px 35px;
    margin-bottom: 30px;
    color: white;
    font-weight: 600;
    background-color: var(--text-color);
    border: none;
    border-radius: 40px;
    -webkit-border-radius: 40px;
    -moz-border-radius: 40px;
    -ms-border-radius: 40px;
    -o-border-radius: 40px;
    cursor: pointer;
    outline: none;
    -webkit-tap-highlight-color: transparent;
}
.choose-color:hover {
    opacity: 0.8;
}

/* select color panel */
.pick-color {
    background-color: white;
    width: 400px;
    height: auto;
    padding: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 20px;
    box-shadow:  0px 5px 20px rgba(0, 0, 0, 0.1);
    -webkit-border-radius: 20px;
    -moz-border-radius: 20px;
    -ms-border-radius: 20px;
    -o-border-radius: 20px;
    transition: ease 1s;
    -webkit-transition: ease 1s;
    -moz-transition: ease 1s;
    -ms-transition: ease 1s;
    -o-transition: ease 1s;
    position: absolute;
    bottom: 70px;
    z-index: 10;
    display: none;
    justify-content: space-evenly;
}

/* set of available colors */
.colors {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -ms-border-radius: 50%;
    -o-border-radius: 50%;
    cursor: pointer;
    outline: none;
    -webkit-tap-highlight-color: transparent;
    box-shadow: inset 0 0 0 5px white;
    transition: ease 0.2s;
    -webkit-transition: ease 0.2s;
    -moz-transition: ease 0.2s;
    -ms-transition: ease 0.2s;
    -o-transition: ease 0.2s;
}

.colors:hover {
    transform: scale(1.3);
    -webkit-transform: scale(1.3);
    -moz-transform: scale(1.3);
    -ms-transform: scale(1.3);
    -o-transform: scale(1.3);
}

.colors:nth-child(1) {
    background-color: #98c5a7;
    border: 3px solid #98c5a7;
}
.colors:nth-child(2) {
    background-color: #f0b863;
    border: 3px solid #f0b863;
    margin-left: 10px;
}
.colors:nth-child(3) {
    background-color: #ff8686;
    border: 3px solid #ff8686;
    margin-left: 10px;
}
.colors:nth-child(4) {
    background-color: #a0886c;
    border: 3px solid #a0886c;
    margin-left: 10px;
}
.colors:nth-child(5) {
    background-color: #929292;
    border: 3px solid #929292;
    margin-left: 10px;
}
.colors:nth-child(6) {
    background-color: #8364ac;
    border: 3px solid #8364ac;
    margin-left: 10px;
}

.input-selection {
    border-top: 2px solid rgb(237, 237, 237);
    padding: 10px;
}

.dim {
    position: absolute;
    /* width: 500%;
    height: 500%; */
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background-color: rgb(0, 0, 0, 0.4);
    z-index: 1;
    display: none;
}

.fade-in {
    animation: fadeIn 1s ease forwards;
    -webkit-animation: fadeIn 0.5s ease forwards;
}

@keyframes fadeIn {
    from { transform: scale(0); -webkit-transform: scale(0); -moz-transform: scale(0); -ms-transform: scale(0); -o-transform: scale(0); 
        opacity: 0;
    }
    to { transition: scale(1); -webkit-transition: scale(1); -moz-transition: scale(1); -ms-transition: scale(1); -o-transition: scale(1);
        opacity: 1;
        display: block;
    }
}


/* Touches for smaller screen sizes */
@media only screen and (max-width: 500px){
    .pick-color {
        width: 320px;
    }
    .colors {
        width: 35px;
        height: 35px;
    }
}

